# mymat

./: .gitignore  CMakeLists.txt  README.md  test
doc/: math.md  matrix.md  mymat.md  vector.md
src/: common.cc  common.h  convert.hpp  dmatrix.h  exception.bk.txt  exception.h  math.h  matrix.h  matrix.hpp  mymat.h  operator.hpp  random.h  tools.hpp  type.cc  type.hpp  vector.h  vector.hpp  wrapper.hpp
src/math/: abs.hpp  check.hpp  cmp.hpp  fraction.cc  fraction.h  fraction.hpp  near.cc  near.h  near.hpp  sqrt.hpp  to_string.hpp
src/math/fraction/: fraction_add.cc  fraction_cmp.cc  fraction_div.cc  fraction_eval.cc  fraction_is_one.cc  fraction_is_zero.cc  fraction_mul.cc  fraction_reciprocal.cc  fraction_str.cc  fraction_sub.cc
src/matrix/: __check_shape_exception.hpp  __fix_index_xxx.hpp  __good_form_compare_object.hpp  add.hpp  adjoint.hpp  algebraic_cofactor.hpp  append.hpp  assign.hpp  cholesky.hpp  cofactor.hpp  cofactor_matrix.hpp  counter_diagonal.hpp  crout.hpp  det.hpp  diag.hpp  diagonalizable.hpp  diagonalize.hpp  dot.hpp  exception.hpp  expansion.hpp  exponential.hpp  flat.hpp  function.hpp  identity.hpp  inverse.hpp  judgment.hpp  ldu.hpp  lu.hpp  main_diagonal.hpp  map.hpp  mul.hpp  normalization.hpp  nullity.hpp  one.hpp  operator.hpp  orthogonalization.hpp  plu.hpp  qr.hpp  random.hpp  rank.hpp  (+12 more)
src/reserve/fraction/: fraction_add.cc  fraction_div.cc  fraction_mul.cc  fraction_str.cc
src/reserve/matrix/: __fix_index_xxx.hpp  adjoint.hpp  cholesky.hpp  counter_diagonal.hpp  det.hpp  diag.hpp  diagonalizable.hpp  exception.hpp  ldu.hpp  map.hpp  mul.hpp  qr.hpp  rank_type.hpp  reshape.hpp  svd.hpp  trace.hpp  transposition.hpp  upper_triangular_form.hpp  zero.hpp
src/test/: test.cc  test_adjoint.cc  test_math.cc  test_matrix.cc  test_matrix_adjoint.cc  test_matrix_decomposition.cc  test_matrix_det.cc  test_matrix_eigen.cc  test_matrix_expansion.cc  test_matrix_inverse.cc  test_matrix_judgment.cc  test_matrix_normalization.cc  test_matrix_operator.cc  test_matrix_orth.cc  test_matrix_qr.cc  test_matrix_rank.cc  test_matrix_xxx_form.cc  test_sort.cc  test_type.cc  test_vector.cc  test_vector_normalization.cc  test_vector_operator.cc  test_vector_wrapper.cc
src/vector/: __fix_index.hpp  add.hpp  append.hpp  assign.hpp  cross.hpp  dot.hpp  exception.hpp  function.hpp  map.hpp  mul.hpp  norm.hpp  normalization.hpp  one.hpp  operator.hpp  random.hpp  slice.hpp  sub.hpp  transposition.hpp  zero.hpp
